src/components/Score/FinalScore.css
.finalScoreWrapper {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    color: rgb(240, 240, 240);
    background-color: rgba(0, 0, 0, 0.6);
    backdrop-filter: blur(8px);
    font-weight: 800;
    width: 80%;
    border-radius: 15px;
    margin: 0.5rem 0;
}

.finalScoreContainer {
    display: flex;
    justify-content: space-around;
    height: 50vh;
    width: 100%;
    position: absolute;
}

.newBest {
    font-size: 2rem;
}

.scoreText {
    font-size: 1.2rem;
    font-weight: 600;
}

.best {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    width: 100%;
    text-align: center;
}

@media only screen and (max-width: 900px) {
    .finalScoreWrapper {
        margin: 0;
        width: 95%;
    }
}

